add custom metaset handling to OsdServlet
* delete metasets when osd gets deleted - close #220
* implement getObjectsWithCustomMetadata (as: extra flag includeCustomMetadata on getObjects requests) close #218